[metadata]
name = python-fu
version = 0.1
author = Vincent Driessen
author-email = vincent@3rdcloud.com
project-url = 'https://github.com/nvie/python-fu/'
summary = python-fu: Python command line tools, for increased fu.
description-file = README.md
license = BSD
requires-dist = setuptools
classifier =
    # As from http://pypi.python.org/pypi?%3Aaction=list_classifiers
    #Development Status :: 1 - Planning
    #Development Status :: 2 - Pre-Alpha
    #Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    Development Status :: 5 - Production/Stable
    #Development Status :: 6 - Mature
    #Development Status :: 7 - Inactive
    Programming Language :: Python
    Programming Language :: Python :: 2
    #Programming Language :: Python :: 2.3
    #Programming Language :: Python :: 2.4
    Programming Language :: Python :: 2.5
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: PyPy
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: System :: Systems Administration

[files]
packages = python_fu
scripts =
    bin/mkmodule
    bin/promote
    bin/demote
